# rust-http-server

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: mdbooks-deploy.yml  rust.yml
examples/: cookies.rs  file_server.rs  showcase.rs
lib/: enums.rs  handlers.rs  lib.rs  structs.rs  utils.rs
src/: enums.rs  main.rs  structs.rs  utils.rs
tutorial/: 404.html  book.toml  fmt.sh  generic-data-structures.html  handlers-module.html  http-protocol.html  index.html  installation.html  minimal-example.html  modules-introduction.html  print.html  request-handlers.html  request-response-structs.html  searchindex.js  searchindex.json
tutorial/code-examples/: diff_dir-example.rs  handlers.rs
tutorial/src/: README.md  SUMMARY.md  generic-data-structures.md  handlers-module.md  http-protocol.md  installation.md  minimal-example.md  modules-introduction.md  request-handlers.md  request-response-structs.md
tutorial/src/code-examples/: cookie.rs  diff_dir-example.rs  handlers.rs  minimal-server.rs  same_dir-example.rs
www/: README.md
www/different/: hello.html
